content/boundary/v0.13.x/content/docs/commands/credential-stores/list.mdx
---
layout: docs
page_title: credential-stores list - Command
description: |-
  The "credential-stores list" command lists credential stores within an enclosing scope or resource.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-10-29T10:56:20-04:00
last_modified: 2025-10-29T10:56:20-04:00
# END AUTO GENERATED METADATA
---

# credential-stores list

Command: `boundary credential-stores list`

The `credential-stores list` command lists any credential stores within an enclosing scope or resource.

## Examples

The following example lists all credential stores for a scope with the ID `p_tnqESc86qE`:

```shell-session
$ boundary credential-stores list -scope-id p_tnqESc86qE
```

**Example output:**

<CodeBlockConfig hideClipboard>

```plaintext
Credential Store information:
  ID:                    csvlt_5fvkRjCjou
    Version:             1
    Type:                vault
    Authorized Actions:
      no-op
      read
      update
      delete
```

</CodeBlockConfig>

## Usage

<CodeBlockConfig hideClipboard>

```shell-session
$ boundary credential-stores list [options] [args]
```

</CodeBlockConfig>


### Command options

- `-filter` `(string: "")` - If set, Boundary filters the list operation before the results are returned.
The filter operates against each item in the list.
We recommend that you use single quotes, because the filters contain double quotes.
Refer to the [Filter resource listings documentation](/boundary/docs/concepts/filtering/resource-listing) for more details.
- `-recursive`  - If set, the list operation is applied recursively into child scopes, if supported by the type.
The default value is `false`.
- `-scope-id ``(string: "")` - The scope in which to make the request.
The default value is `global`.
You can also specify the scope using the **BOUNDARY_SCOPE_ID** environment variable.

@include 'cmd-option-note.mdx'